--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
         background-color: #f4f4f4;
         padding-bottom: 55px;
     }
-    h1{
+    .first-title{
         text-align: center;
         width: 60%;
         margin-left: auto;
@@ -152,7 +152,7 @@ body{
         color: #3D8D7A;
     }
     i.far.fa-heart{
-        font-size: 20px;
+        font-size: 23px;
         color: black;
         position: absolute;
         margin-left: 308px;
@@ -226,7 +226,7 @@ body{
 
 
 
-    /***** Heart animation try *********
+    /***** Heart animation try **********
     i.far.fa-heart{
         position: relative;
         overflow: hidden;
@@ -255,4 +255,111 @@ body{
         transform: translateY(-100%) rotate(500deg);
     }
 }*/
+
+/******** SECOND RESTAURANT *************/
+.restaurant-name{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-right: 30px;
+}
+i.fas.fa-arrow-left{
+    text-decoration: none;
+    position: absolute;
+    margin-left: 30px;
+    margin-top: 5px;
+    color: black;
+}
+div.background-image{
+    display: flex;
+    height: 280px;
+}
+.img1{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.menu-container{
+    background-color: #f2f2f2;
+    border-radius: 40px 40px 0 0;
+    padding-bottom: 60px;
+    padding-top: 20px;
+    width: 100%;
+    top: 42%;
+}
+.second-title{
+    font-family: 'Shrikhand', cursive;
+    margin-left: 18px;
+    margin-bottom: 0px;
+    font-size: 25px;
+    margin-top: 0;
+    font-weight: 100;
+
+}
+i.far.fa-heart.two{
+    font-size: 22px;
+    margin-left: 0;
+    margin-top: 5px;
+    position: unset;
+}
+.menu{
+    margin-left: 10px;
+
+}
+.menu-type{
+    text-transform: uppercase;
+    color: #747474;
+    padding-bottom: 10px;
+    margin-left: 5px;
+    position: relative;
+}
+.menu-type::before{
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 11%;
+    border-bottom: 3px solid #99E2D0;
+}
+.menu-title{
+    margin-top: 0;
+}
+.food-container{
+    margin-bottom: 35px;
+}
+.entree-caption{
+    margin: 0;
+}
+.p-number{
+    margin: 0;
+}
+.place-menu{
+    background-color: white;
+    border-radius: 17px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    width: 93%;
+    padding-right: 15px;
+    margin-bottom: 10px;
+}
+.price-place{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 4%;
+}
+.bouton2{
+    text-align: center;
+        width: 57%;
+        margin-top: 60px;
+        padding: 15px 0px;
+        margin-left: auto;
+        border-radius: 30px;
+        margin-right: auto;
+        box-shadow: 0 5px 6px 0px #C3C3C3;
+        background-image: linear-gradient(to bottom, #ff79da, #e86edb, #cf64dc, #b35cdc, #9356dc);
+}
+.bouton-commander{
+    color: white;
+    margin: 0;
+}
 }
