--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body{
     }
     h2{
         margin-top: 0;
+        margin-bottom: 0;
     }
     .filtres-container{
         margin-left: 3%;
@@ -137,7 +138,7 @@ body{
         padding-top: 30px;
     }
     .gallery-menu{
-        margin-bottom: 15px;
+        padding-top: 15px;
     }
     .new{
         padding: 6px 15px;
@@ -204,11 +205,10 @@ body{
         margin-top: 0;
         margin-bottom: 0;
         padding-top: 20px;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
     }
     .icon-footer{
         display: flex;
-        padding-bottom: 10px;
     }
     i.fas.fa-utensils{
         margin-right: 12px;
