--- a/style.css
+++ b/style.css
@@ -112,6 +112,9 @@ body{
         width: 85%;
         box-shadow: 0 3px 11px 0px #C3C3C3;
     }
+    .filtre1:hover, .filtre2:hover, .filtre3:hover{
+        box-shadow: 0 3px 11px 0px #9356DC;
+    }
     i.fas.fa-list-ul, i.fas.fa-store, i.fas.fa-mobile-alt{
         height: fit-content;
         width: 15%;
@@ -263,6 +266,9 @@ body{
 }*/
 
 /******** SECOND RESTAURANT *************/
+section.menu-part{
+    background-color: #f2f2f2;
+}
 .restaurant-name{
     display: flex;
     justify-content: space-between;
@@ -288,10 +294,10 @@ div.background-image{
 .menu-container{
     background-color: #f2f2f2;
     border-radius: 40px 40px 0 0;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     padding-top: 20px;
     width: 100%;
-    top: 42%;
+    transform: translateY(-3%);
 }
 .second-title{
     font-family: 'Shrikhand', cursive;
@@ -336,9 +342,18 @@ i.far.fa-heart.two{
 }
 .entree-caption{
     margin: 0;
+    width: 90%;
 }
-.p-number{
+p.p-number{
+    position: absolute;
+    right: 15px;
+    display: flex;
+    justify-content: flex-end;
+    height: 100%;
     margin: 0;
+    align-items: flex-end;
+    width: 10%;
+    top: -12px;
 }
 .place-menu{
     background-color: white;
@@ -352,19 +367,36 @@ i.far.fa-heart.two{
     margin-bottom: 10px;
 }
 .check{
-    display: none;
     background-color: #99E2D0;
     height: 100%;
     width: 20%;
     position: absolute;
-    right: -70px;
     top: 0;
+    right: -70px;
+}
+.place-menu:hover > .check{
+    animation: mymove 0.3s linear;
+    animation-delay:0s;
+    animation-fill-mode: forwards;
+}
+@keyframes mymove {
+    from {right: -70px;}
+    to {right: 0px;}
+}
+.place-menu:hover > p.p-number{
+    animation: movetwo 0.3s linear;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
+}
+@keyframes movetwo { 
+    from {right: 15px;}
+    to {right: 75px;}
 }
 i.fas.fa-check-circle{
-    -webkit-animation: fa-spin 0.4s ;
-  -moz-animation: fa-spin 0.4s ;
-  -o-animation: fa-spin 0.4s ;
-  animation: fa-spin 0.4s;
+    -webkit-animation: fa-spin 0.7s ;
+    -moz-animation: fa-spin 0.7s ;
+    -o-animation: fa-spin 0.7s;
+    animation: fa-spin 0.7s;
     color: white;
     position: absolute;
     font-size: 20px;
@@ -372,9 +404,11 @@ i.fas.fa-check-circle{
     left: 50%;
     margin: -9px;
 }
-.place-menu:hover > .check{
-    display: block;
-    right: 0;
+.place-menu:hover > .i.fas.fa-check-circle{
+    -webkit-animation: fa-spin 1s ;
+    -moz-animation: fa-spin 1s ;
+    -o-animation: fa-spin 1s;
+    animation: fa-spin 1s;
 }
 .price-place{
     display: flex;
