--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@ i.far.fa-heart.two{
     right: 7%;
 }
 .menu{
+    display: block;
     margin-left: 10px;
     margin-bottom: 60px;
 
@@ -388,26 +389,6 @@ p.p-number{
     width: 93%;
     padding-right: 15px;
     margin-bottom: 10px;
-}
-.place-menu.first{
-    animation: animDiv 1.2s ease-in-out 0.7s;
-    animation-fill-mode: both;
-}
-@keyframes animDiv {
-    0%   {top:10px;
-          opacity:0;
-    }
-    100%  {top:0px;
-           opacity:1;
-    }
-}
-.place-menu.second{
-    animation: animDiv 1s ease-in-out 0.9s;
-    animation-fill-mode: both;
-}
-.place-menu.third{
-    animation: animDiv 1s ease-in-out 1.3s;
-    animation-fill-mode: both;
 }
 .check{
     background-color: #99E2D0;
