--- a/style2.css
+++ b/style2.css
@@ -163,6 +163,9 @@ a{
     position: absolute;
     transform: translate(0px, -22px);
 }
+.gallery-menu{
+    position: relative;
+}
 .gallery-menu:hover{
     box-shadow: 0 3px 11px 0px #9356DC, 0px -9px 10px -8px #FF79DA;
     border-radius: 20px 20px;
@@ -172,132 +175,12 @@ a{
     width: fit-content;
     background-color: #99E2D0;
     position: absolute;
-    margin-left: 12%;
     margin-top: 16px;
+    right: 5%;
 }
 .p-new{
     margin: 0;
     color: #3D8D7A;
-}
-.heart-and-title{
-    display: flex;
-    justify-content: space-between;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-}
-i.far.fa-heart{
-    cursor: pointer;
-}
-h3{
-    color: black;
-    margin-top: 0;
-    margin-bottom: 5px;
-}
-div.overlay{
-    padding-top: 15px;
-    background-color: white;
-    border-radius: 0 0 20px 20px;
-    padding-bottom: 14px;
-}
-.p-caption{
-    margin: 0;
-    color: black;
-    margin-left: 15px;
-    font-size: 16px;
-}
-.grid-image{
-    display: block;
-    width: 100%;
-    height: 145px;
-    object-fit: cover;
-    border-radius: 20px 20px 0 0
-}
-footer{
-    background-color: #3A3A3A;
-}
-.place-footer{
-    margin-left: auto;
-    margin-right: auto;
-    width: fit-content;
-    margin-left: 5%;
-    padding-bottom: 30px;
-}
-.footer-caption{
-    color: white;
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-h4{
-    color: white;
-    font-family: 'Shrikhand', cursive;
-    font-weight: 100;
-    font-size: 18px;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-.icon-footer{
-    display: flex;
-}
-i.fas.fa-utensils{
-    margin-right: 12px;
-    margin-left: 5px;
-    color: white;
-    font-size: 14px;
-    margin-top: 2px;
-}
-i.fas.fa-hands-helping{
-    margin-right: 11px;
-    color: white;
-    font-size: 14px;
-    margin-top: 2px;
-}
-/*************** heart test ***********/
-i.far.fa-heart{
-    font-size: 23px;
-    color: unset;
-    margin: 2px;
-}
-i.fa.fa-heart{
-    display: none;
-    font-size: 22px;
-    margin: 3px;
-    cursor: pointer;
-}
-i.far.fa-heart:hover{
-    display: none;
-}
-i.far.fa-heart:hover + i.fa.fa-heart{
-    display: block;
-    color: red;
-    animation: color 2s ease-in-out;
-}
-/*********** test heart end **********/
-.place-menu.first{
-    animation: animDiv 1.2s ease-in-out 0.7s;
-    animation-fill-mode: both;
-}
-.place-menu.second{
-    animation: animDiv 1s ease-in-out 0.9s;
-    animation-fill-mode: both;
-}
-.place-menu.third{
-    animation: animDiv 1s ease-in-out 1.3s;
-    animation-fill-mode: both;
-}
-.place-menu.fourth{
-    animation: animDiv 1s ease-in-out 1.6s;
-    animation-fill-mode: both;
-}
-@keyframes animDiv {
-    0%   {top:10px;
-          opacity:0;
-    }
-    100%  {top:0px;
-           opacity:1;
-    }
 }
 @media screen and (max-width: 1304px) and (min-width: 376px) {
    .first-grid{
@@ -340,42 +223,16 @@ i.far.fa-heart:hover + i.fa.fa-heart{
     .filtre2, .filtre3{
         margin-top: 20px;
     }
-    .new{
-        margin-left: 22%;
-    }
     .place-footer{
         margin-left: 2%;
-    }
-}
-@media screen and (max-width: 1220px){
-    .new{
-        margin-left: 21%;
     }
 }
 @media screen and (max-width: 1144px){
     .title-and-filtre{
         width: 65%;
     }
-    .new{
-        margin-left: 20%;
-    }
     .place-footer{
         margin-left: 5%;
-    }
-}
-@media screen and (max-width: 1090px){
-    .new{
-        margin-left: 20%;
-    }
-}
-@media screen and (max-width: 984px){
-    .new{
-        margin-left: 19%;
-    }
-}
-@media screen and (max-width: 900px){
-    .new{
-        margin-left: 17%;
     }
 }
 @media screen and (max-width: 852px){
@@ -383,34 +240,32 @@ i.far.fa-heart:hover + i.fa.fa-heart{
         grid-template-rows: auto auto;
         grid-template-columns: none;
     }
-    .new{
-        margin-left: 29%;
-    }
-}
-@media screen and (max-width: 732px){
-    .new{
-        margin-left: 27%;
-    }
-}
-@media screen and (max-width: 640px){
-    .new{
-        margin-left: 25%;
-    }
-}
-@media screen and (max-width: 572px){
-    .new{
-        margin-left: 23%;
-    }
 }
 @media screen and (max-width: 525px){
     .grid-restaurant{
         grid-template-columns: repeat(1, 1fr);
         row-gap: 15px;
     }
-    .new{
-        margin-left: 65%;
-    }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*********** loading animation ********************
 body {
     display: flex;
