--- a/style3.css
+++ b/style3.css
@@ -1,5 +1,4 @@
 /********* 4 Restaurants's media queries *********/
-@media screen and (max-width: 1400px) and (min-width: 376px){
     section.menu-part{
         background-color: #f2f2f2;
     }
@@ -49,9 +48,6 @@
         margin-left: 0;
         margin-top: 5px;
     }
-    .entrees, .Plats, .Desserts{
-        width: 25%;
-    }
     .menu{
         display: flex;
         justify-content: space-between;
@@ -60,7 +56,6 @@
         width: 90%;
         margin-top: 35px;
         margin-bottom: 50px;
-    
     }
     .menu-type{
         text-transform: uppercase;
@@ -92,11 +87,11 @@
         margin-left: 5px;
     }
     p.p-number{
-        position: absolute;
         right: 15px;
         display: flex;
         justify-content: flex-end;
         height: 100%;
+        position: absolute;
         margin: 0;
         align-items: flex-end;
         width: 10%;
@@ -135,13 +130,13 @@
     }
     .check{
         background-color: #99E2D0;
+        position: absolute;
         height: 100%;
         width: 20%;
-        position: absolute;
         top: 0;
         right: -70px;
     }
-    .place-menu:hover > .check{
+    .place-menu:hover  .check{
         animation: mymove 0.3s linear;
         animation-delay:0s;
         animation-fill-mode: forwards;
@@ -150,7 +145,7 @@
         from {right: -70px;}
         to {right: 0px;}
     }
-    .place-menu:hover > p.p-number{
+    .place-menu:hover  p.p-number{
         animation: movetwo 0.3s linear;
         animation-delay: 0s;
         animation-fill-mode: forwards;
@@ -160,10 +155,6 @@
         to {right: 75px;}
     }
     i.fas.fa-check-circle{
-        -webkit-animation: fa-spin 0.7s;
-        -moz-animation: fa-spin 0.7s ;
-        -o-animation: fa-spin 0.7s;
-        animation: fa-spin 0.7s;
         color: white;
         position: absolute;
         font-size: 20px;
@@ -171,11 +162,17 @@
         left: 50%;
         margin: -9px;
     }
-    .place-menu:hover > .i.fas.fa-check-circle{
-        -webkit-animation: fa-spin 1s ;
-        -moz-animation: fa-spin 1s ;
-        -o-animation: fa-spin 1s;
-        animation: fa-spin 1s;
+    .place-menu:hover  i.fas.fa-check-circle{
+        transform:             rotate( 360deg );            
+        -moz-transform:    rotate( 360deg );            
+        -ms-transform:     rotate( 360deg );            
+        -o-transform:      rotate( 360deg );            
+        -webkit-transform: rotate( 360deg );            
+    transition:             transform 0.6s linear;
+        -moz-transition:    -moz-transform 0.6s linear;
+        -ms-transition:     -ms-transform 0.6s linear;
+        -o-transition:      -o-transform 0.6s linear;
+        -webkit-transition: -webkit-transform 0.6s linear;
     }
     .price-place{
         display: flex;
@@ -200,4 +197,128 @@
         color: white;
         margin: 0;
     }
-}
+    div.entrees, div.Plats, div.Desserts{
+        width: 30%;
+    }
+    div.check{
+        right: -73px;
+    }
+    h3{
+        color: black;
+        margin-top: 0;
+        margin-bottom: 5px;
+    }
+    .caption{
+        margin-left: 15px;
+    }
+    div.overlay{
+        padding-top: 15px;
+        position: relative;
+        background-color: white;
+        border-radius: 0 0 20px 20px;
+        padding-bottom: 14px;
+    }
+    .p-caption{
+        margin: 0;
+        color: black;
+        margin-left: 15px;
+        font-size: 16px;
+    }
+    .grid-image{
+        display: block;
+        width: 100%;
+        height: 145px;
+        object-fit: cover;
+        border-radius: 20px 20px 0 0
+    }
+    footer{
+        background-color: #3A3A3A;
+    }
+    .place-footer{
+        margin-left: auto;
+        margin-right: auto;
+        width: fit-content;
+        margin-left: 5%;
+        padding-bottom: 30px;
+    }
+    .footer-caption{
+        color: white;
+        margin-top: 0;
+        margin-bottom: 10px;
+    }
+    h4{
+        color: white;
+        font-family: 'Shrikhand', cursive;
+        font-weight: 100;
+        font-size: 18px;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    .icon-footer{
+        display: flex;
+    }
+    i.fas.fa-utensils{
+        margin-right: 12px;
+        margin-left: 5px;
+        color: white;
+        font-size: 14px;
+        margin-top: 2px;
+    }
+    i.fas.fa-hands-helping{
+        margin-right: 11px;
+        color: white;
+        font-size: 14px;
+        margin-top: 2px;
+    }
+    /*************** heart test ***********/
+    i.far.fa-heart{
+        position: absolute;
+        cursor: pointer;
+        font-size: 23px;
+        color: unset;
+        margin: 2px;
+        right: 5%;
+    }
+    i.fas.fa-heart{
+        display: none;
+    }
+    i.far.fa-heart:hover{
+        display: none;
+    }
+    .far:hover ~ .fas{
+        display: block;
+        cursor: pointer;
+        position: absolute;
+        color: red;
+        right: 5%;
+        animation: color 2s ease-in-out;
+        font-size: 22px;
+        margin: 3px;
+    }
+    /*********** test heart end **********/
+    .place-menu.first{
+        animation: animDiv 1.2s ease-in-out 0.7s;
+        animation-fill-mode: both;
+    }
+    .place-menu.second{
+        animation: animDiv 1s ease-in-out 0.9s;
+        animation-fill-mode: both;
+    }
+    .place-menu.third{
+        animation: animDiv 1s ease-in-out 1.3s;
+        animation-fill-mode: both;
+    }
+    .place-menu.fourth{
+        animation: animDiv 1s ease-in-out 1.6s;
+        animation-fill-mode: both;
+    }
+    @keyframes animDiv {
+        0%   {top:10px;
+              opacity:0;
+        }
+        100%  {top:0px;
+               opacity:1;
+        }
+    }
