--- a/style2.css
+++ b/style2.css
@@ -185,6 +185,38 @@ a{
     margin: 0;
     color: #3D8D7A;
 }
+/*************** heart test ***********/
+i.far.fa-heart{
+    position: absolute;
+    cursor: pointer;
+    font-size: 23px;
+    color: unset;
+    margin: 2px;
+    right: 5%;
+}
+i.fas.fa-heart{
+    display: none;
+}
+i.far.fa-heart:hover{
+    display: none;
+}
+.far:hover ~ .fas{
+    display: block;
+    cursor: pointer;
+    position: absolute;
+    background:-moz-linear-gradient(top, #9356dc 0%, #ff79da 100%); 
+    background: -webkit-linear-gradient(top, #9356dc 0%,#ff79da 100%); 
+    background: linear-gradient(to bottom, #9356dc 0%,#ff79da 100%);
+    /*-webkit-background-clip: text;
+    -moz-background-clip: text;*/
+   -webkit-text-fill-color:transparent;
+   animation-name: heart;
+   animation: heart 4s ease-in-out;
+    right: 5%;
+    font-size: 22px;
+    margin: 3px;
+}
+/*********** test heart end **********/
 @media screen and (max-width: 1304px) and (min-width: 376px) {
    .first-grid{
     display: grid;
