--- a/style2.css
+++ b/style2.css
@@ -207,8 +207,8 @@ i.far.fa-heart:hover{
     background:-moz-linear-gradient(top, #9356dc 0%, #ff79da 100%); 
     background: -webkit-linear-gradient(top, #9356dc 0%,#ff79da 100%); 
     background: linear-gradient(to bottom, #9356dc 0%,#ff79da 100%);
-    /*-webkit-background-clip: text;
-    -moz-background-clip: text;*/
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
    -webkit-text-fill-color:transparent;
    animation-name: heart;
    animation: heart 4s ease-in-out;
