--- a/style3.css
+++ b/style3.css
@@ -53,7 +53,7 @@
         justify-content: space-between;
         margin-left: auto;
         margin-right: auto;
-        width: 90%;
+        width: 95%;
         margin-top: 35px;
         margin-bottom: 50px;
     }
@@ -100,7 +100,6 @@
     .entree-caption{
         margin: 0;
         width: 90%;
-        margin-left: 5px;
     }
     p.p-number{
         right: 15px;
@@ -160,7 +159,7 @@
     }
     @keyframes movetwo { 
         from {right: 15px;}
-        to {right: 75px;}
+        to {right: 85px;}
     }
     i.fas.fa-check-circle{
         color: white;
@@ -182,10 +181,22 @@
         -o-transition:      -o-transform 0.6s linear;
         -webkit-transition: -webkit-transform 0.6s linear;
     }
+    .place-menu:hover  .entree-caption{
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        width: 65%;
+    }
+    .place-menu:hover  .menu-title{
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+        width: 65%;
+    }
     .price-place{
         display: flex;
         justify-content: space-between;
-        margin-left: 4%;
+        margin-left: 15px;
     }
     .bouton2{
         text-align: center;
@@ -313,19 +324,22 @@
     .menu{
         display: block;
     }
+    .menu-part{
+        height: 1000px;
+    }
     div.entrees, div.Plats, div.Desserts{
         width: 100%;
     }
     div.check{
-        right: -174px;
+        right: -190px;
     }
     @keyframes mymove {
-        from {right: -174px;}
+        from {right: -190px;}
         to {right: 0px;}
     }
     @keyframes movetwo { 
         from {right: 15px;}
-        to {right: 178px;}
+        to {right: 21%;}
     }
 }
 
