--- a/style.css
+++ b/style.css
@@ -214,13 +214,13 @@ body{
     footer{
         background-color: #3A3A3A;
     }
-    .place-footer{
+    /*.place-footer{
         margin-left: auto;
         margin-right: auto;
         width: fit-content;
         margin-left: 5%;
         padding-bottom: 30px;
-    }
+    }*/
     .footer-caption{
         color: white;
         margin-top: 0;
