--- a/style2.css
+++ b/style2.css
@@ -1,3 +1,239 @@
+/*********** loading animation **********************/
+.loader_bg{
+    background: fixed;
+    z-index: 1;
+    background-color: white;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    animation: fadeinLoad 1s 2.5s forwards;
+}
+.cssload-loader {
+	position: relative;
+    left: calc(50% - 31px);
+    top: calc(50% - 31px);
+	width: 62px;
+	height: 62px;
+	border-radius: 50%;
+		-o-border-radius: 50%;
+		-ms-border-radius: 50%;
+		-webkit-border-radius: 50%;
+		-moz-border-radius: 50%;
+	perspective: 780px;
+}
+
+.cssload-inner {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+		-o-box-sizing: border-box;
+		-ms-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+	border-radius: 50%;
+		-o-border-radius: 50%;
+		-ms-border-radius: 50%;
+		-webkit-border-radius: 50%;
+        -moz-border-radius: 50%;	
+}
+
+.cssload-inner.cssload-one {
+	left: 0%;
+	top: 0%;
+	animation: cssload-rotate-one 0.9s linear infinite;
+		-o-animation: cssload-rotate-one 0.9s linear infinite;
+		-ms-animation: cssload-rotate-one 0.9s linear infinite;
+		-webkit-animation: cssload-rotate-one 0.9s linear infinite;
+		-moz-animation: cssload-rotate-one 0.9s linear infinite;
+	border-bottom: 3px solid rgba(255,121,217,0.98);
+}
+
+.cssload-inner.cssload-two {
+	right: 0%;
+	top: 0%;
+	animation: cssload-rotate-two 0.9s linear infinite;
+		-o-animation: cssload-rotate-two 0.9s linear infinite;
+		-ms-animation: cssload-rotate-two 0.9s linear infinite;
+		-webkit-animation: cssload-rotate-two 0.9s linear infinite;
+		-moz-animation: cssload-rotate-two 0.9s linear infinite;
+	border-right: 3px solid rgb(146,86,220);
+}
+
+.cssload-inner.cssload-three {
+	right: 0%;
+	bottom: 0%;
+	animation: cssload-rotate-three 0.9s linear infinite;
+		-o-animation: cssload-rotate-three 0.9s linear infinite;
+		-ms-animation: cssload-rotate-three 0.9s linear infinite;
+		-webkit-animation: cssload-rotate-three 0.9s linear infinite;
+		-moz-animation: cssload-rotate-three 0.9s linear infinite;
+	border-top: 3px solid rgb(153,226,208);
+}
+.loader_bg::before  body{
+    overflow: hidden;
+}
+
+
+
+
+
+
+@keyframes cssload-rotate-one {
+	0% {
+		transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+
+@-o-keyframes cssload-rotate-one {
+	0% {
+		-o-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-o-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+
+@-ms-keyframes cssload-rotate-one {
+	0% {
+		-ms-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-ms-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+
+@-webkit-keyframes cssload-rotate-one {
+	0% {
+		-webkit-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-webkit-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+
+@-moz-keyframes cssload-rotate-one {
+	0% {
+		-moz-transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+	}
+	100% {
+		-moz-transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+	}
+}
+
+@keyframes cssload-rotate-two {
+	0% {
+		transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+
+@-o-keyframes cssload-rotate-two {
+	0% {
+		-o-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-o-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+
+@-ms-keyframes cssload-rotate-two {
+	0% {
+		-ms-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-ms-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+
+@-webkit-keyframes cssload-rotate-two {
+	0% {
+		-webkit-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-webkit-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+
+@-moz-keyframes cssload-rotate-two {
+	0% {
+		-moz-transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+	}
+	100% {
+		-moz-transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+	}
+}
+
+@keyframes cssload-rotate-three {
+	0% {
+		transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+        transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+
+@-o-keyframes cssload-rotate-three {
+	0% {
+		-o-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-o-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+
+@-ms-keyframes cssload-rotate-three {
+	0% {
+		-ms-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-ms-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+
+@-webkit-keyframes cssload-rotate-three {
+	0% {
+		-webkit-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-webkit-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+
+@-moz-keyframes cssload-rotate-three {
+	0% {
+		-moz-transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+	}
+	100% {
+		-moz-transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+	}
+}
+@-webkit-keyframes fadeinLoad {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+  @keyframes fadeinLoad {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
+/*********** loading animation **********************/
+
+
+
 /***************** HOME PAGE'S MEDIA QUERY ************/
 a{
     text-decoration: none;
@@ -11,6 +247,11 @@ a{
     margin-left: auto;
     margin-right: auto;
 }*/
+.container{
+    width: 1345px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .logo{
     width: 140px;
     display: block;
@@ -217,7 +458,15 @@ i.far.fa-heart:hover{
     margin: 3px;
 }
 /*********** test heart end **********/
+.place-footer{
+    width: 1214px;
+    margin-left: auto;
+    margin-right: auto;
+}
 @media screen and (max-width: 1304px){
+    .container{
+        width: unset;
+    }
    .first-grid{
     display: grid;
     grid-template-columns: 30% auto;
@@ -260,6 +509,7 @@ i.far.fa-heart:hover{
     }
     .place-footer{
         margin-left: 2%;
+        width: unset;
     }
 }
 @media screen and (max-width: 1144px){
@@ -306,64 +556,4 @@ i.far.fa-heart:hover{
 
 
 
-/*********** loading animation ********************
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #4A0939;
-}
-.loader {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    border: 4px solid #240229;
-    overflow: hidden;
-    border-radius: 50%;
-    box-shadow: -5px -5px 5px rgba(255, 255, 255, 0.1),
-      10px 10px 10px rgba(0, 0, 0, 0.4),
-      inset -5px -5px 5px rgba(255, 255, 255, 0.2),
-      inset 10px 10px 10px rgba(0, 0, 0, 0.4);
-  }
-  
-  .loader:before {
-    content: "";
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    right: 25px;
-    bottom: 25px;
-    z-index: 10;
-    background: #4A0939;
-    border-radius: 50%;
-    border: 2px solid #240229;
-    box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 0.2),
-      inset 3px 3px 5px rgba(0, 0, 0, 0.5);
-  }
-  
-  .loader span {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-image: linear-gradient(
-      -225deg,
-      #9356DC 0%,
-      #9356DC 50%,
-      #FF79DA 100%
-    );
-  
-    filter: blur(20px);
-    z-index: -1;
-    animation: animate 0.5s linear infinite;
-  }
-  
-  @keyframes animate {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }*/
+
