--- a/style3.css
+++ b/style3.css
@@ -159,7 +159,7 @@
     }
     @keyframes movetwo { 
         from {right: 15px;}
-        to {right: 85px;}
+        to {right: 22%;}
     }
     i.fas.fa-check-circle{
         color: white;
@@ -259,10 +259,6 @@
         background-color: #3A3A3A;
     }
     .place-footer{
-        margin-left: auto;
-        margin-right: auto;
-        width: fit-content;
-        margin-left: 5%;
         padding-bottom: 30px;
     }
     .footer-caption{
